--- a/examples/animation_offsets_disabled.html
+++ b/examples/animation_offsets_disabled.html
@@ -41,11 +41,6 @@
 
     import {Viewer} from "../src/viewer/Viewer.js";
     import {XKTLoaderPlugin} from "../src/plugins/XKTLoaderPlugin/XKTLoaderPlugin.js";
-    import {math} from "../src/viewer/scene/math/math.js";
-    import {VBOGeometry} from "../src/viewer/scene/geometry/VBOGeometry.js";
-    import {buildGridGeometry} from "../src/viewer/scene/geometry/builders/buildGridGeometry.js";
-    import {PhongMaterial} from "../src/viewer/scene/materials/PhongMaterial.js";
-    import {Mesh} from "../src/viewer/scene/mesh/Mesh.js";
 
     //------------------------------------------------------------------------------------------------------------------
     // Create a Viewer, arrange the camera, tweak the x-ray material and  SAO
@@ -57,109 +52,33 @@
         enableOffsets: false
     });
 
-    const cameraControl = viewer.cameraControl;
-    const scene = viewer.scene;
-    const sao = scene.sao;
-    const camera = scene.camera;
+    viewer.scene.camera.eye = [10.45, 17.38, -98.31];
+    viewer.scene.camera.look = [43.09, 0.5, -26.76];
+    viewer.scene.camera.up = [0.06, 0.96, 0.16];
 
-    camera.eye = [-26.07, 52.94, 35.13];
-    camera.look = [-6.81, -9.43, 7.75];
-    camera.up = [0.50, 0.47, -0.72];
+    viewer.scene.selectedMaterial.fillAlpha = 0.1;
 
-    camera.perspective.near = 0.1;
-    camera.perspective.far = 5000.0;
-
-    scene.xrayMaterial.fillColor = [0.0, 0.0, 1.0];
-    scene.xrayMaterial.edgeColor = [0.0, 0.0, 0.0];
-    scene.xrayMaterial.fillAlpha = 0.1;
-    scene.xrayMaterial.edgeAlpha = 0.4;
-
-    sao.enabled = true; // Only works if supported (see above)
-    sao.intensity = 0.15;
-    sao.bias = 0.5;
-    sao.scale = 1000.0;
-    sao.minResolution = 0.0;
-    sao.kernelRadius = 100;
-
-    cameraControl.followPointer = true;
-
-    //------------------------------------------------------------------------------------------------------------------
-    // Create a ground plane
-    //------------------------------------------------------------------------------------------------------------------
-
-    new Mesh(viewer.scene, {
-        geometry: new VBOGeometry(viewer.scene, buildGridGeometry({
-            size: 600,
-            divisions: 100
-        })),
-        material: new PhongMaterial(viewer.scene, {
-            color: [0.0, 0.0, 0.0],
-            emissive: [0.4, 0.4, 0.4]
-        }),
-        position: [0, -1.6, 0],
-        collidable: false
-    });
-
-    //------------------------------------------------------------------------------------------------------------------
-    // Load building model
-    //------------------------------------------------------------------------------------------------------------------
+    //----------------------------------------------------------------------------------------------------------------------
+    // Create an XKT loader plugin, load a model, fit to view
+    //----------------------------------------------------------------------------------------------------------------------
 
     const xktLoader = new XKTLoaderPlugin(viewer);
 
-    const model = xktLoader.load({
-        id: "myModel",
-        src: "./models/xkt/schependomlaan/schependomlaan.xkt",
-        metaModelSrc: "./metaModels/schependomlaan/metaModel.json",
-        saoEnabled: true,
-        edges: true
-    });
-
-    const t0 = performance.now();
+    var t0 = performance.now();
 
     document.getElementById("time").innerHTML = "Loading model...";
 
-    //------------------------------------------------------------------------------------------------------------------
-    // When model loaded, slide each building storey out and lay it on the ground plane
-    //------------------------------------------------------------------------------------------------------------------
-
-    model.on("loaded", function () {
-
-        setTimeout(() => {
-
-            const t1 = performance.now();
-            document.getElementById("time").innerHTML = "Model loaded in " + Math.floor(t1 - t0) / 1000.0 + " seconds<br>Objects: " + model.numEntities;
-
-            moveObject("0u4wgLe6n0ABVaiXyikbkA", [-25, -3, 0]);
-            moveObject("0wPqxf9KX0nPDjgzD8mXwD", [-25, -6, 25]);
-            moveObject("2Hyat1fsPEGfyYPyim12A1", [0, -9, 25]);
-            moveObject("0oaSdYqubDuuJF4k9AqHjC", [0, -12, -25]);
-
-        }, 500);
+    const model = xktLoader.load({
+        id: "myModel",
+        src: "./models/xkt/OTCConferenceCenter/OTCConferenceCenter.xkt",
+        metaModelSrc: "./metaModels/OTCConferenceCenter/metaModel.json", // Creates a MetaObject instances in scene.metaScene.metaObjects
+        edges: true
     });
 
-    function moveObject(objectId, dir, done) {
-
-        const metaObject = viewer.metaScene.metaObjects[objectId];
-        if (!metaObject) {
-            return;
-        }
-
-        const objectIds = viewer.metaScene.getObjectIDsInSubtree(objectId);
-        const dmax = math.lenVec3(dir);
-        let d = 0;
-
-        const onTick = scene.on("tick", () => {
-            d += 0.75;
-            if (d > dmax) {
-                scene.off(onTick);
-                if (done) {
-                    done();
-                }
-                return;
-            }
-            scene.setObjectsOffset(objectIds, math.mulVec3Scalar(dir, (d / dmax), []));
-        });
-    }
+    model.on("loaded", () => {
+        var t1 = performance.now();
+        document.getElementById("time").innerHTML = "Model loaded in " + Math.floor(t1 - t0) /1000.0 + " seconds<br>Objects: " + model.numEntities;
+    });
 
 </script>
 </html>
