--- a/examples/animation_offsets_disabled.html
+++ b/examples/animation_offsets_disabled.html
@@ -20,7 +20,7 @@
 <div id="info">
     <h1>Viewer with enableOffsets configured false</h1>
     <br>
-    <p>Nothing should move, since offsets are disabled.</p><br>
+    <p>This is a test, to use in case Entity#offset is suspected of causing a performance regression.</p><br>
     <ul>
         <li>
             <div id="time">Loading JavaScript modules...</div>
